Get /discover/tv shows from the tmdb api

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 APP_SETTINGS=project.server.config.DevelopmentConfig
 # to change
+TMDB_API_KEY=
 SECRET_KEY=my_precious
 DB_HOST=localhost
 DB_PORT=5432
